# Graph-ICS

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DeveloperGuide.docx  Installation.docx  LICENSE  LICENSE.txt  README.md  Test  myapp.rc  readme.md  resource.qrc  sh.exe.stackdump  ~$veloperGuide.docx
QML/: ComoBoxItem.qml  ConfigManager.qml  ConfigureToolbar.qml  GCanvas.qml  GFilter.qml  GFilter2Ports.qml  GFilter3Ports.qml  GNode.qml  GProgressBar.qml  GToolBar.qml  Image.qml  InfoPopup.qml  MenuManager.qml  NewConfigDialog.qml  Port.qml  SubtractWarningDialog.qml  ToolBarItem.qml  main.qml
Sources/: controller.cpp  controller.h  gimageprovider.cpp  gimageprovider.h  image.cpp  image.h  imageconverter.cpp  imageconverter.h  main.cpp  node.cpp  node.h  worker.cpp  worker.h
app/: CMakeLists.txt  Nodes.cmake
app/font/: font.qrc
app/img/: img.qrc  logo.icns  myapp.rc
app/qml/: GCanvas.qml  GConfigManager.qml  GFavoritesBar.qml  GFavoritesBarItem.qml  GFileHandler.qml  GNodeAccessItem.qml  GSearchPanel.qml  Global.qml  Main.qml  NodeCreator.qml  NodeList.qml  Theme.qml  qml.qrc
app/qml/components/: FishSpinner.qml  GBackground.qml  GButton.qml  GComboBox.qml  GContentDelegate.qml  GDropShadow.qml  GFileButton.qml  GFlickable.qml  GIconButton.qml  GListView.qml  GMenu.qml  GMenuBarItem.qml  GMenuItem.qml  GProgressBar.qml  GRangeSlider.qml  GScrollBar.qml  GSlider.qml  GSplitView.qml  GSwitch.qml  GSwitchDelegate.qml  GTabButton.qml  GText.qml  GTextField.qml  GToolTip.qml  GViewAreaSettings.qml  YesNoDialog.qml
app/qml/menu/: AboutWindow.qml  GConnectionDialog.qml  GFindHelpWindow.qml  GMenuBar.qml  GSettings.qml
app/qml/node/: GNode.qml  GPort.qml  GPortsColumn.qml
app/qml/node/attribute/: ComboBoxAttribute.qml  GAttribute.qml  SwitchAttribute.qml  TextFieldAttribute.qml
app/qml/node/custom/: CvSobelOperator.qml
app/qml/statusbar/: GCameraTaskControl.qml  GGlobalTaskControl.qml  GImageTaskControl.qml  GStatusbar.qml  GStatusbarTaskControl.qml  GVideoFrameMarker.qml  GVideoTaskControl.qml  MessageTab.qml  VideoEditor.qml  VideoFrameControl.qml  VideoPlayControl.qml  VideoStopControl.qml
app/qml/task/: GCameraTask.qml  GImageTask.qml  GTask.qml  GTaskInitializer.qml  GVideoTask.qml
app/qml/view/: GDiagramView.qml  GImageView.qml  GView.qml  GViewArea.qml  GViewContainer.qml
app/src/: gappinfo.h.in  gappinitializer.cpp  gappinitializer.h  gappupdater.cpp  gappupdater.h  main.cpp  nodeprovider.cpp.in  nodeprovider.h
app/src/model/: attribute.cpp  attribute.h  node.cpp  node.h  port.cpp  port.h
app/src/model/generic/: dummy.cpp  dummy.h
app/src/model/input/: camera.cpp  camera.h  image.cpp  image.h  video.cpp  video.h
app/src/model/itk/: itkbinarymorphclosing.cpp  itkbinarymorphclosing.h  itkbinarymorphopening.cpp  itkbinarymorphopening.h  itkcannyedgedetection.cpp  itkcannyedgedetection.h  itkdiscretegaussian.cpp  itkdiscretegaussian.h  itkmedian.cpp  itkmedian.h  itksubtract.cpp  itksubtract.h
app/src/model/opencv/: cvdilation.cpp  cvdilation.h  cverosion.cpp  cverosion.h  cvfouriertransformpsd.cpp  cvfouriertransformpsd.h  cvhistogramcalculation.cpp  cvhistogramcalculation.h  cvhistogramequalization.cpp  cvhistogramequalization.h  cvmedian.cpp  cvmedian.h  cvsobeloperator.cpp  cvsobeloperator.h  cvtransformation.cpp  cvtransformation.h
app/src/model/output/: diagramview.cpp  diagramview.h  imageview.cpp  imageview.h  view.cpp  view.h
app/src/model/qt/: qtblackwhite.cpp  qtblackwhite.h  qtdarker.cpp  qtdarker.h  qtlighter.cpp  qtlighter.h
app/src/utility/: attributefactory.cpp  attributefactory.h  fileio.cpp  fileio.h  gimageprovider.cpp  gimageprovider.h  gutility.cpp  gutility.h  imageconverter.cpp  imageconverter.h
app/src/utility/commands/: command.h  commandhistory.cpp  commandhistory.h  copyframescommand.cpp  copyframescommand.h  cutframescommand.cpp  cutframescommand.h  pasteframescommand.cpp  pasteframescommand.h
app/src/utility/tasks/: cameratask.cpp  cameratask.h  imagetask.cpp  imagetask.h  scheduler.cpp  scheduler.h  task.cpp  task.h  videotask.cpp  videotask.h
app/src/utility/types/: gdata.cpp  gdata.h  gimage.cpp  gimage.h
app/src/utility/validator/: doublevalidator.cpp  doublevalidator.h  filepathvalidator.cpp  filepathvalidator.h  intvalidator.cpp  intvalidator.h  stringvalidator.cpp  stringvalidator.h  validator.cpp  validator.h
cmake/: Functions.cmake
docs/: CMakeLists.txt  README.md
docs/doxygen/: Doxyfile
docs/sphinx/: conf.py  index.rst
examples/: CMakeLists.txt  README.md
examples/remoteCommunication/: CMakeLists.txt
examples/remoteCommunication/client/: Nodes.cmake  RequestProtocol.h  requesthandler.cpp  requesthandler.h
examples/remoteCommunication/client/nodes/: remoteexamplenode.cpp  remoteexamplenode.h  remotesobel.cpp  remotesobel.h
examples/remoteCommunication/client/service/: ISobel.hpp  SobelStub.cpp  SobelStub.h
examples/remoteCommunication/server/: CMakeLists.txt
examples/remoteCommunication/server/src/: RequestProtocol.h  ServerSocket.cpp  ServerSocket.hpp  WritingThread.cpp  WritingThread.hpp  main.cpp
examples/remoteCommunication/server/src/service/: SkeletonFactory.cpp  SkeletonFactory.hpp  Sobel.cpp  Sobel.hpp
examples/remoteCommunication/server/src/skeletons/: FactorySkeleton.cpp  FactorySkeleton.hpp  ServiceSkeleton.cpp  ServiceSkeleton.hpp  SobelSkeleton.cpp  SobelSkeleton.hpp
package/: installscript.js  package.xml.in
platform/: Graph-ICS.desktop.in  Info.plist.in
plugins/: CMakeLists.txt  Nodes.cmake  README.md
plugins/remote/: CMakeLists.txt  Connection.cpp  Connection.hpp  Entities.proto  commthread.cpp  commthread.h
qml/: ConfigManager.qml  GCanvas.qml  GExportDialog.qml  GFavoritesBar.qml  GMenuBar.qml  GNode.qml  GSettings.qml  GSidePanel.qml  GStatusbar.qml  InfoPopup.qml  MenuManager.qml  NewConfigDialog.qml  NodeList.qml  NodeWarning.qml  Port.qml  QmlStringCreator.qml  main.qml  qml.qrc
src/: channelpixelaccessors.cpp  channelpixelaccessors.h  fileio.cpp  fileio.h  gimage.cpp  gimage.h  gimageprovider.cpp  gimageprovider.h  gthread.h  (+12 more)
(+150 files in other folders)
